<resources>
    <string name="app_name">ZenApp</string>
    <string name="soundsButton">Sounds</string>
    <string name="guidedButton">Guided</string>
    <string name="breathingButton">Breathing</string>
    <string name="forestText">Forest</string>
    <string name="nightText">Night</string>
    <string name="campfireText">Campfire</string>
    <string name="snow_mountainText">Snow Mountain</string>
    <string name="rainText">Rain</string>
    <string name="city_at_nightText">City at Night</string>
    <string name="beachText">Beach</string>
    <string name="anxietyText">Anxiety</string>
    <string name="stressText">Stress</string>
    <string name="sleepText">Sleep</string>
    <string name="depressionText">Depression</string>
    <string name="confidenceText">Confidence</string>
    <string name="mainactivitybuttons">MainActivityButtons</string>
    <string name="splash_logo">splashlogo</string>
</resources>
