<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:id="@+id/soundsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/soundsButton"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/guidedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/guidedButton"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/breathingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/breathingButton"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/anxietyText"
            android:onClick="guided_anxiety"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/stressText"
            android:onClick="guided_stress"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/sleepText"
            android:onClick="guided_sleep"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/mybutton"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/depressionText"
        android:onClick="guided_depression"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/mybutton"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/confidenceText"
        android:onClick="guided_confidence"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

</LinearLayout>